trunk/Archive2/e2/d0725e57315723/output
main.cpp: In function 'int main()':
main.cpp:5:34: error: expected initializer before '>' token
 int main() { for(int y = f(x), y > x; y--) {} std::cout << y; }
                                  ^
main.cpp:5:34: error: expected ';' before '>' token
main.cpp:5:34: error: expected primary-expression before '>' token
main.cpp:5:60: error: 'y' was not declared in this scope
 int main() { for(int y = f(x), y > x; y--) {} std::cout << y; }
                                                            ^
